sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: illegal start of simple expression
        copie(, )
              ^AlgInsertionSort:9: error: ')' expected but '}' found.
    }
    ^