sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var l= getNombreValeurs()
  for (i <- 1 to l-1){
    var v = getValeur(i)
    for ( j<- i to ){
      if (getValeur() > v){
        copie(, )
    }
   }  
  }
}